@@ -391,6 +391,20 @@ GST_DSOUND_UNLOCK
 </SECTION>
 
 <SECTION>
+<FILE>element-dv1394src</FILE>
+<TITLE>dv1394src</TITLE>
+GstDV1394Src
+<SUBSECTION Standard>
+GstDV1394SrcClass
+GST_TYPE_DV1394SRC
+GST_DV1394SRC
+GST_DV1394SRC_CLASS
+GST_IS_DV1394SRC
+GST_IS_DV1394SRC_CLASS
+gst_dv1394src_get_type
+</SECTION>
+
+<SECTION>
 <FILE>element-dvdec</FILE>
 <TITLE>dvdec</TITLE>
 GstDVDec
