@@ -3,6 +3,14 @@
 	* docs/plugins/Makefile.am:
 	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
 	* docs/plugins/gst-plugins-good-plugins-sections.txt:
+	* ext/raw1394/gstdv1394src.c:
+	  Document whats first shown on the fdo plugin docs page :)
+
+2008-05-28  Stefan Kost  <ensonic@users.sf.net>
+
+	* docs/plugins/Makefile.am:
+	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
+	* docs/plugins/gst-plugins-good-plugins-sections.txt:
 	* docs/plugins/gst-plugins-good-plugins.args:
 	* docs/plugins/gst-plugins-good-plugins.hierarchy:
 	* docs/plugins/inspect/plugin-audiofx.xml:
